[package]
name = "auth-server"
version = "1.3.8"
authors = ["Tobias Tangemann <tobias@tangemann.org>"]
description = "Service for authenticating requests from nginx (ngx_http_auth_request_module)."
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
actix-web = { version = "4.8.0", default-features = false, features = ["macros", "cookies"] }
clap = { version = "4.5.8", features = ["derive", "env"] }
cookie = "0.18.1"
jsonwebtoken = { version = "9.3.0", default-features = false }
log = "0.4.22"
serde = "1.0.204"
simple_logger = { version = "5.0.0", default-features = false }
time = { version = "0.3.36", features = ["formatting"] } # must match dependency in cookie
tokio = { version = "1.38.0", features = ["macros"] }

[dev-dependencies]
base64 = "0.22.1"
serde_json = "1.0.120"
tempfile = "3.10.1"

[features]
systemd_socket_activation = ["libsystemd", "futures"]

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs", "user"] }

[target.'cfg(target_os = "linux")'.dependencies]
futures = { version = "0.3.30", optional = true }
libsystemd = { version = "0.7.0", optional = true }

[profile.release]
#debug = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
split-debuginfo = "unpacked"
